@@ -32,6 +32,7 @@ NEW CHANGES:
              (+) remove systemd-nspawn@ service;
              (+) remove systemd-localed service;
              (+) remove systemd-vconsole-setup service;
+             (+) move systemd-udev-settle service to separate module udev;
 
 CHANGES WITH 214:
 
